# Spectra

./: .gitignore  CMBR.sh  CMakeLists.txt  README.md  be  bench.txt  mgs.txt
src/: main.cpp  test.spct
src/ast/: expression.cpp  expression.hpp  node.cpp  node.hpp  token_stream.cpp  token_stream.hpp  visitor.cpp  visitor.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/lexer/: scanner.cpp  scanner.hpp  spectra.cpp  spectra.hpp  token.cpp  token.hpp
src/lexer/util/: run.cpp  run.hpp
src/parser/: parser.cpp  parser.hpp
src/tests/: unit_tests.cpp  unit_tests.hpp
src/util/: debug.hpp
